some stuff on sending messages and setup secure channel with auth token

--- a/Quackmessage_desktop/Quackmessage_desktopContent/CMakeLists.txt
+++ b/Quackmessage_desktop/Quackmessage_desktopContent/CMakeLists.txt
@@ -12,6 +12,8 @@ qt6_add_qml_module(Quackmessage_desktopContent
         "App.qml"
         "LoginForm.ui.qml"
         "Login.qml"
+        "MainWindow.qml"
+        "MainWindowForm.ui.qml"
 )
 
 
