--- a/Quackmessage_desktop/Quackmessage_desktopContent/CMakeLists.txt
+++ b/Quackmessage_desktop/Quackmessage_desktopContent/CMakeLists.txt
@@ -14,6 +14,7 @@ qt6_add_qml_module(Quackmessage_desktopContent
         "Login.qml"
         "MainWindow.qml"
         "MainWindowForm.ui.qml"
+        "MessageBox.ui.qml"
 )
 
 
