--- a/server/dockerfile
+++ b/server/dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-RUN pip install --no-chache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 RUN python -m grpc_tools.protoc -I../protobuf --python_out=. --pyi_out=. --grpc_python_out=. ../protobuf/message.proto
 RUN python -m grpc_tools.protoc -I../protobuf --python_out=. --pyi_out=. --grpc_python_out=. ../protobuf/auth.proto
