--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
-name: Build Quackmessage Client
-on: [push]
+name: Build Python App with Nuitka
+
+on:
+  push:
+    branches: [main]
+  pull_request:
 
 jobs:
   build:
@@ -9,42 +13,51 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Checkout Code
+      - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.10'
           cache: 'pip'
+          cache-dependency-path: |
+            **/requirements*.txt
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
-          pip install nuitka zstandard ordered-set
-          # Install from your requirements or manually
-          pip install PySide6 grpcio grpcio-tools
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt -r requirements-dev.txt
 
       - name: Build with Nuitka
         uses: Nuitka/Nuitka-Action@main
         with:
-          nuitka-version: main
-          # Point to the script within the subdirectory
+          # Your entry-point script:
           script-name: client_qt/main.py
-          onefile: true
-          enable-plugins: pyside6
-          # Pass your specific flags here
-          extra-args: |
-            --include-package=grpc
-            --include-package-data=grpc
-            --include-qt-plugins=qml
-            --follow-imports
-            --include-package-data=qml
-            ${{ matrix.os == 'windows-latest' && '--windows-disable-console' || '' }}
+          working-directory: client_qt
+          include-package-data: grpc qml
+          
+          company-name: "Quackmail"
+          product-name: "Quackmessage"
+          # Which Nuitka release to use:
+          nuitka-version: main
 
-      - name: Upload Executable
+          # Build mode: 'app', 'standalone', or leave unset for default
+          mode: onefile
+
+          enable-plugins: pyside6
+          
+
+          output-file: quackmessage
+          
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: quackmessage-${{ matrix.os }}
-          path: build/*
-          # Note: On Linux, Nuitka creates a .bin or extensionless file.
-          # You can use build/* to catch both.
+          name: ${{ matrix.os }} Build
+          path: |
+            build/**/*.exe
+            build/**/*.bin
+            build/**/*.run
+            build/**/*
+          if-no-files-found: ignore
+          include-hidden-files: true
