--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: Nuitka/Nuitka-Action@main
         with:
           # Your entry-point script:
-          script-name: client_qt/main.py
+          script-name: main.py
           working-directory: client_qt
           include-package-data: grpc qml
           
