--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
           # Your entry-point script:
           script-name: main.py
           working-directory: client_qt
-          include-package-data: grpc, qml
+          include-package-data: grpc
+          include-data-dir: qml
           
           company-name: "Quackmail"
           product-name: "Quackmessage"
