--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           # Your entry-point script:
           script-name: main.py
           working-directory: client_qt
-          include-package-data: grpc, client_qt/qml
+          include-package-data: grpc, qml
           
           
           #company-name: "Quackmail"
