--- a/server/dockerfile
+++ b/server/dockerfile
@@ -12,4 +12,4 @@ RUN python -m grpc_tools.protoc -I. --python_out=. --pyi_out=. --grpc_python_out
 
 EXPOSE 5555
 
-CMD [python, ./main.py]
+CMD ["python", "./main.py"]
