--- a/Quackmessage_desktop/Quackmessage_desktopContent/CMakeLists.txt
+++ b/Quackmessage_desktop/Quackmessage_desktopContent/CMakeLists.txt
@@ -15,6 +15,7 @@ qt6_add_qml_module(Quackmessage_desktopContent
         "MainWindow.qml"
         "MainWindowForm.ui.qml"
         "MessageBox.ui.qml"
+        "LoginForm.ui.qml"
 )
 
 
