--- a/server/dockerfile
+++ b/server/dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY ./server .
 COPY ./protobuf .
 
+RUN pip install -U pip
 RUN pip install -r requirements.txt
 
 RUN python -m grpc_tools.protoc -I. --python_out=. --pyi_out=. --grpc_python_out=. ./message.proto
