--- a/server/dockerfile
+++ b/server/dockerfile
@@ -13,4 +13,6 @@ RUN python -m grpc_tools.protoc -I. --python_out=. --pyi_out=. --grpc_python_out
 
 EXPOSE 5555
 
+ENV PYTHONUNBUFFERED=1
+
 CMD ["python", "./main.py"]
